syntax = "proto3";

option go_package = "github.com/sachintiptur/simple-app/proto";

package env;
// The request message containing environment variable name
message EnvRequest {
  string env_name  = 1;
}

// The response message containing environment variable value
message EnvResponse {
  string env_value  = 1;
}

// Getter service definition
service Getter{
  rpc GetEnvVariable (EnvRequest) returns (EnvResponse);
}

